# litparser

./: LICENSE  README.md  __main__.py  pyproject.toml  setup.py
core/: __init__.py  layout_analyzer.py  modern_pdf.py  parser.py
formats/: docx_parser.py
litparser/: README.md  __init__.py  __main__.py  _grid_table.py  output_formatter.py  pyproject.toml
litparser/core/: content_stream.py  image_extractor.py  layout_analyzer.py  parser.py  stream_decoder.py  struct_tree.py  table_detector.py
litparser/formats/: __init__.py  doc_parser.py  hwp_parser.py  hwpx_parser.py  ppt_parser.py  pptx_parser.py  text_parser.py  xls_parser.py  xlsx_parser.py
litparser/litparser/: __init__.py
litparser/litparser/core/: __init__.py  content_stream.py  image_extractor.py  layout_analyzer.py  ole_parser.py
litparser/litparser/formats/: __init__.py  doc_parser.py
